<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Lissen</string>
    <string name="a11y_back">Back</string>
    <string name="a11y_menu">Menu</string>
    <string name="a11y_search">Search</string>
    <string name="a11y_clear">Clear</string>
    <string name="a11y_add">Add</string>
    <string name="a11y_settings">Settings</string>
    <string name="a11y_delete_from_cache">Delete from cache</string>
    <string name="a11y_available_offline">Available offline</string>
    <string name="a11y_collapse_queue">Collapse queue</string>
...
    <string name="login_error_username_is_missing">Username is missing</string>
    <string name="login_error_password_is_missing">Password is missing</string>
    <string name="login_error_credentials_are_invalid">Credentials are invalid</string>
    <string name="login_error_host_url_shall_be_https_or_http">Host URL shall be https:// or http://</string>
    <string name="login_error_connection_error">Connection error</string>
    <string name="show_downloaded_content_only">Downloaded only</string>
    <string name="library_quick_settings_grouping_title">Grouping</string>
    <string name="library_grouping_disabled">Disabled</string>
    <string name="library_grouping_series">By Series</string>
    <string name="library_grouping_author">By Author</string>
    <string name="library_grouping_genre">By Genre</string>
    <string name="library_grouping_narrator">By Narrator</string>
    <plurals name="series_books_count">
        <item quantity="one">%d book</item>
        <item quantity="other">%d books</item>
...
    <string name="player_screen_timer_navigation">Timer</string>
    <string name="chapter_search_hint">Search by chapter title</string>
    <string name="widget_placeholder_text">Click to open the app</string>
    <string name="player_state_widget_label">Now playing</string>
    <string name="player_cover_widget_label">Now playing (cover)</string>
    <string name="the_offline_podcasts_is_empty">No saved podcasts yet</string>
    <string name="player_screen_downloads_navigation">Downloads</string>
    <string name="episode_ordering_published_at_option">Published date</string>
    <string name="episode_ordering_season_option">Season</string>
    <string name="episode_ordering_episode_option">Episode</string>
    <string name="episode_ordering_file_name_option">File name</string>
    <string name="episode_ordering_ascending">Ascending</string>
    <string name="episode_ordering_descending">Descending</string>
...
    <string name="player_settings_skip_disabled">Disabled</string>
    <string name="player_settings_intro_value">Intro %1$s</string>
    <string name="player_settings_outro_value">Outro %1$s</string>
    <string name="downloads_menu_download_book">Download book</string>
    <string name="downloads_menu_download_podcast">Download podcast</string>
    <string name="downloads_menu_download_option_disable">Disabled</string>
    <string name="downloads_menu_download_option_current_chapter">Current chapter</string>
    <string name="downloads_menu_download_option_current_episode">Current episode</string>
    <string name="downloads_menu_download_option_entire_book">Entire book</string>
    <string name="downloads_menu_download_option_entire_podcast">Entire podcast</string>
    <string name="downloads_menu_download_option_remaining_chapters">Remaining chapters</string>
    <string name="downloads_menu_download_option_remaining_episodes">Remaining episodes</string>
    <plurals name="downloads_menu_download_option_next_chapters">
...
    <string name="restart_the_app_to_start_using_the_new_codecs_title">Restart the app to start using the new codecs</string>
    <string name="restart_the_app_to_start_using_the_new_codecs_cta">Restart</string>
    <string name="codes_not_supported_warning_toast">Audio format not supported</string>
    <string name="bookmarks_create_bookmark">Create bookmark</string>
    <string name="bookmarks_title">Bookmarks</string>
    <string name="hide_completed_items">Hide finished</string>
    <string name="application_settings">Application settings</string>
    <string name="tree_node_recent">Recent</string>
    <string name="tree_node_library">Library</string>
    <string name="tree_node_downloads">Downloads</string>
    <string name="tree_node_downloads_offline">Downloads (offline mode)</string>
    <string name="tree_node_root">Root</string>
    <string name="tree_node_all_titles">All titles</string>
    <string name="tree_node_series_collapsed">Collapsed series</string>
    <string name="tree_node_genres">Genres</string>
    <string name="tree_node_tags">Tags</string>
    <string name="tree_node_authors">Authors</string>
    <string name="tree_node_series">Series</string>
    <string name="connection_settings_title">Connection</string>
    <string name="connection_settings_description">Server address, proxy, and SSL</string>
    <string name="disconnect_from_server_title">Disconnect from the server</string>
    <string name="disconnect_from_server_confirmation_message">You\'ll be disconnected from the server on this device. Your data will not be affected</string>
    <string name="disconnect_from_server_confirm">Disconnect</string>
    <string name="settings_screen_activity_logging_title">Activity Logging</string>
    <string name="settings_screen_activity_logging_description">Record diagnostic events to a local file</string>
    <string name="restart_the_app_to_apply_logging_changes_title">Restart the app to apply logging changes</string>
    <string name="restart_the_app_to_apply_logging_changes_cta">Restart</string>
    <string name="restart_the_app_to_apply_settings_title">Restart the app to apply settings</string>
    <string name="restart_the_app_to_apply_settings_cta">Restart</string>
...
