...
    ) {
      BasicTextField(
        value = searchText.value,
        onValueChange = { updateSearchText(it) },
        modifier =
          Modifier
            .testTag("librarySearchField")
            .weight(1f)
            .focusRequester(focusRequester),
        textStyle = typography.bodyLarge.copy(color = colorScheme.onBackground),
        singleLine = true,
        keyboardOptions =
          KeyboardOptions.Default.copy(
...
