...
        .build()
    }

  Row(
    modifier =
      Modifier
        .testTag("playerScreen")
        .padding(innerPadding)
        .fillMaxSize(),
  ) {
    Box(
      modifier =
        Modifier
...
