...
      visible = backgroundVisible,
      exit = fadeOut(animationSpec = tween(300)),
    ) {
      Row(
        modifier =
          Modifier
            .testTag("miniPlayer")
            .fillMaxWidth()
            .background(colorScheme.background)
            .semantics(mergeDescendants = true) {
              customActions =
                listOf(
                  CustomAccessibilityAction(closeLabel) {
...
