...
      .debounce(150)
      .collect { viewModel.updateAuthData() }
  }
  Scaffold(
    modifier =
      Modifier
        .testTag("loginScreen")
        .systemBarsPadding()
        .fillMaxSize(),
    content = { innerPadding ->
      Box(
        modifier =
          Modifier
...
